--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -49,57 +49,14 @@ HOST,union.uc.cn,REJECT
 HOST-SUFFIX,inner-active.mobi,REJECT
 HOST,x.appbaqend.com,REJECT
 
-HOST-SUFFIX,sehuatang.org,PROXY
-HOST-SUFFIX,mazu.m.qq.com,DIRECT
-HOST-SUFFIX,1drv.com,PROXY
-USER-AGENT,Brawl%20Stars*,DIRECT
-HOST-SUFFIX,mazu.m.qq.com,DIRECT
-HOST-SUFFIX,v2ex.com,DIRECT
-HOST-SUFFIX,maying.co,PROXY
 
-HOST-SUFFIX,mtvip.net,DIRECT
-HOST-SUFFIX,lxysh.xyz,DIRECT
-HOST-SUFFIX,alexametrics.com,REJECT
-HOST-SUFFIX,ssr.sh,PROXY
-HOST-S！UFFIX,cordcloud.online,PROXY
-HOST-SUFFIX,cloudfront.net,DIRECT
-HOST-SUFFIX,pthome.net,DIRECT
-HOST-SUFFIX,beautylegmm.com,PROXY
 
-HOST-SUFFIX,culturedcode.com,DIRECT
-HOST-SUFFIX,zaobao.com,PROXY
-HOST-SUFFIX,newsblur.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,crashlytics.com,DIRECT
-HOST-SUFFIX,1password.com,PROXY
-
-// Microsoft
-IP-CIDR,40.64.0.0/10,PROXY,no-resolve
-HOST-SUFFIX,acompli.net,PROXY
-
-HOST-SUFFIX,fonts.googleapis.com,DIRECT
-HOST-SUFFIX,fonts.gstatic.com,DIRECT
-
-//Apple
-IP-CIDR,17.0.0.0/8,选择Apple的策略，不懂就选择DIRECT,no-resolve
-HOST,appleiphonecell.com,选择Apple的策略，不懂就选择DIRECT
-USER-AGENT,AppStore*,选择Apple的策略，不懂就选择DIRECT
-HOST-KEYWORD,icloud,选择Apple的策略，不懂就选择DIRECT
-HOST-KEYWORD,itunes,选择Apple的策略，不懂就选择DIRECT
-HOST-SUFFIX,aaplimg.com,选择Apple的策略，不懂就选择DIRECT
-HOST-SUFFIX,apple.co,选择Apple的策略，不懂就选择DIRECT
-HOST-SUFFIX,apple.com,选择Apple的策略，不懂就选择DIRECT
-HOST-SUFFIX,appsto.re,选择Apple的策略，不懂就选择DIRECT
-HOST-SUFFIX,cdn-apple.com,选择Apple的策略，不懂就选择DIRECT
-HOST-SUFFIX,me.com,选择Apple的策略，不懂就选择DIRECT
-HOST-SUFFIX,mzstatic.com,选择Apple的策略，不懂就选择DIRECT
-HOST-SUFFIX,icloud.com,选择Apple的策略，不懂就选择DIRECT
-HOST-SUFFIX,icloud-content.com,选择Apple的策略，不懂就选择DIRECT
-HOST-SUFFIX,itunes.com,选择Apple的策略，不懂就选择DIRECT
-HOST-SUFFIX,itunes-apple.com.akadns.net,选择Apple的策略，不懂就选择DIRECT
-
-//Apple
-
-//定位相关
+USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
+USER-AGENT,*WeatherFoundation*,DIRECT
+USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
+USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
+USER-AGENT,AppStore*,DIRECT
+USER-AGENT,com.apple.appstored*,DIRECT
 USER-AGENT,com.apple.geod*,DIRECT
 USER-AGENT,com.apple.Maps,DIRECT
 USER-AGENT,FindMyFriends*,DIRECT
@@ -110,28 +67,15 @@ USER-AGENT,fmflocatord*,DIRECT
 USER-AGENT,geod*,DIRECT
 USER-AGENT,locationd*,DIRECT
 USER-AGENT,Maps*,DIRECT
-//支付相关
-USER-AGENT,*Passbook*,DIRECT
-USER-AGENT,passd*,DIRECT
-USER-AGENT,seld*,DIRECT
-USER-AGENT,trustd*,DIRECT
-USER-AGENT,Wallet/1.0*,DIRECT
-//Siri
-USER-AGENT,*AssistantServices*,DIRECT
-USER-AGENT,MobileAsset*,DIRECT
-USER-AGENT,Siri*,DIRECT
+USER-AGENT,TestFlight*,DIRECT
+DOMAIN-SUFFIX,apple.com,DIRECT
+DOMAIN-SUFFIX,icloud.com,DIRECT
+DOMAIN-SUFFIX,itunes.com,DIRECT
+DOMAIN-SUFFIX,me.com,DIRECT
+DOMAIN-SUFFIX,mzstatic.com,DIRECT
+DOMAIN,api.smoot.apple.cn,DIRECT
+PROCESS-NAME,trustd,DIRECT
 
-HOST,api.smoot.apple.com.cn,DIRECT
-HOST,captive.apple.com,DIRECT
-HOST,cn-smp-paymentservices.apple.com,DIRECT
-HOST,smp-device.apple.com,DIRECT
-HOST,smp-device-content.apple.com,DIRECT
-HOST,sp.itunes.apple.com,DIRECT
-HOST-SUFFIX,ess.apple.com,DIRECT
-HOST-SUFFIX,push.apple.com,DIRECT
-HOST-SUFFIX,push-apple.com.akadns.net,DIRECT
-HOST-SUFFIX,gs-loc.apple.com,DIRECT
-HOST-SUFFIX,ls.apple.com,DIRECT
 
 PROCESS-NAME,Jietu,REJECT
 
@@ -398,8 +342,36 @@ HOST-SUFFIX,pagead.l.google.com,REJECT
 HOST-SUFFIX,pagead-tpc.l.google.com,REJECT
 
 
+// ME
+HOST-SUFFIX,sehuatang.org,PROXY
+HOST-SUFFIX,mazu.m.qq.com,DIRECT
+HOST-SUFFIX,1drv.com,PROXY
+USER-AGENT,Brawl%20Stars*,DIRECT
+HOST-SUFFIX,mazu.m.qq.com,DIRECT
+HOST-SUFFIX,v2ex.com,DIRECT
+HOST-SUFFIX,maying.co,PROXY
 
+HOST-SUFFIX,mtvip.net,DIRECT
+HOST-SUFFIX,lxysh.xyz,DIRECT
+HOST-SUFFIX,alexametrics.com,REJECT
+HOST-SUFFIX,ssr.sh,PROXY
+HOST-S！UFFIX,cordcloud.online,PROXY
+HOST-SUFFIX,cloudfront.net,DIRECT
+HOST-SUFFIX,pthome.net,DIRECT
+HOST-SUFFIX,beautylegmm.com,PROXY
 
+HOST-SUFFIX,culturedcode.com,DIRECT
+HOST-SUFFIX,zaobao.com,PROXY
+HOST-SUFFIX,newsblur.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,crashlytics.com,DIRECT
+HOST-SUFFIX,1password.com,PROXY
+
+// Microsoft
+IP-CIDR,40.64.0.0/10,PROXY,no-resolve
+HOST-SUFFIX,acompli.net,PROXY
+
+HOST-SUFFIX,fonts.googleapis.com,DIRECT
+HOST-SUFFIX,fonts.gstatic.com,DIRECT
 // Microsoft
 USER-AGENT,Microsoft*,PROXY
 USER-AGENT,OneDrive*,PROXY
@@ -1033,22 +1005,6 @@ HOST-SUFFIX,webrtc.org,PROXY
 HOST-SUFFIX,widevine.com,PROXY
 HOST-SUFFIX,x.company,PROXY
 HOST-SUFFIX,xn—ngstr-lra8j.com,PROXY
-HOST-SUFFIX,fb.com,PROXY,resolve-on-proxy
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 // Force some HOSTs which are fucked by GFW while resolving DNS,or do not respect the system Proxy
@@ -1169,8 +1125,6 @@ HOST-SUFFIX,teamviewer.com,DIRECT
 HOST-SUFFIX,12306.com,DIRECT
 HOST-SUFFIX,126.net,DIRECT
 HOST-SUFFIX,163.com,DIRECT
-HOST-SUFFIX,360.cn,DIRECT
-HOST-SUFFIX,360.com,DIRECT
 HOST-SUFFIX,360buy.com,DIRECT
 HOST-SUFFIX,360buyimg.com,DIRECT
 HOST-SUFFIX,356884.com,DIRECT
