--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -49,8 +49,7 @@ HOST,union.uc.cn,REJECT
 HOST-SUFFIX,inner-active.mobi,REJECT
 HOST,x.appbaqend.com,REJECT
 
-
-
+IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
 USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
 USER-AGENT,*WeatherFoundation*,DIRECT
 USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
