--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -13,10 +13,12 @@ DOMAIN,mps.amap.com,REJECT
 DOMAIN,aos-cdn-image.amap.com,REJECT
 DOMAIN,wb.amap.com,REJECT
 DOMAIN,f.amap.com,REJECT
+
 DOMAIN-KEYWORD,adservice,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,analysis,REJECT
 DOMAIN-SUFFIX,mopub.com,REJECT
+DOMAIN-SUFFIX,mob.com,REJECT
 DOMAIN-SUFFIX,inmobi.cn,REJECT
 DOMAIN-SUFFIX,inmobi.com,REJECT
 DOMAIN-SUFFIX,113.105.248.169,REJECT
@@ -131,12 +133,13 @@ DOMAIN-SUFFIX,stadig.ifeng.com ,REJECT
 DOMAIN-SUFFIX,wrating.com,REJECT
 
 DOMAIN-SUFFIX,hockeyapp.net,REJECT
-DOMAIN,audid-api.taobao.com,REJECT
 DOMAIN,fuwu.wap.sogou.com,REJECT
 DOMAIN-SUFFIX,appodeal.com,REJECT
 DOMAIN-SUFFIX,applvn.com,REJECT
 DOMAIN,x.appbaqend.com,REJECT
-
+DOMAIN-SUFFIX,inner-active.mobi,REJECT
+DOMAIN-SUFFIX,applovin.com,REJECT
+DOMAIN,union.uc.cn,REJECT
 DOMAIN,ad-stat.ksosoft.com,REJECT
 DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
 DOMAIN-SUFFIX,ksosoft.com,REJECT
@@ -153,35 +156,32 @@ DOMAIN-SUFFIX,tiqcdn.com,DIRECT
 DOMAIN-SUFFIX,aolcdn.com,DIRECT
 DOMAIN-SUFFIX,mtvip.net,DIRECT
 DOMAIN-SUFFIX,lxysh.xyz,DIRECT
-DOMAIN-SUFFIX,inner-active.mobi,REJECT
-DOMAIN-SUFFIX,applovin.com,REJECT
-DOMAIN,union.uc.cn,REJECT
 
+DOMAIN-SUFFIX,cloudfront.net,DIRECT
+DOMAIN-SUFFIX,pthome.net,DIRECT
 DOMAIN-SUFFIX,acompli.net,PROXY
 DOMAIN-SUFFIX,helpshift.com,PROXY
 DOMAIN-SUFFIX,evernote.com,PROXY
 DOMAIN-SUFFIX,ssr.sh,PROXY
 DOMAIN-SUFFIX,cordcloud.cc,PROXY
-DOMAIN-SUFFIX,cloudfront.net,DIRECT
-DOMAIN-SUFFIX,pthome.net,DIRECT
 DOMAIN-SUFFIX,sehuatang.org,PROXY
-DOMAIN-SUFFIX,mazu.m.qq.com,DIRECT
 DOMAIN-SUFFIX,zaobao.com,PROXY
 DOMAIN-KEYWORD,github,PROXY,force-remote-dns
-USER-AGENT,Brawl%20Stars*,DIRECT
 DOMAIN-SUFFIX,maying.co,PROXY
-# CUSTOM RULE
+
 
 # Global Area Network
 # (Video)
 DOMAIN,content.jwplatform.com,PROXY
 DOMAIN,videos-f.jwpsrv.com,PROXY
+
 # > Youtube
 USER-AGENT,*youtube*,PROXY,force-remote-dns
 USER-AGENT,YouTube*,PROXY,force-remote-dns
 DOMAIN-SUFFIX,googlevideo.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,youtube.com,PROXY,force-remote-dns
 DOMAIN,youtubei.googleapis.com,PROXY,force-remote-dns
+
 # > Netflix
 USER-AGENT,Argo*,PROXY
 DOMAIN-SUFFIX,netflix.com,PROXY
@@ -191,44 +191,40 @@ DOMAIN-SUFFIX,nflximg.com,PROXY
 DOMAIN-SUFFIX,nflximg.net,PROXY
 DOMAIN-SUFFIX,nflxso.net,PROXY
 DOMAIN-SUFFIX,nflxvideo.net,PROXY
-# > HBO
-USER-AGENT,HBO%20NOW*,PROXY
-DOMAIN-SUFFIX,hbo.com,PROXY
-DOMAIN-SUFFIX,hbogo.com,PROXY
-# > Hulu
-USER-AGENT,Hulu*,PROXY
-DOMAIN-SUFFIX,hulu.com,PROXY
-DOMAIN-SUFFIX,huluim.com,PROXY
-# > Hulu(フールー)
-DOMAIN-SUFFIX,happyon.jp,PROXY
+
 # > BBC iPlayer
 USER-AGENT,BBCiPlayer*,PROXY
 DOMAIN-SUFFIX,bbc.co.uk,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bbci.co.uk,PROXY,force-remote-dns
 DOMAIN-KEYWORD,bbcfmt,PROXY
 DOMAIN-KEYWORD,uk-live,PROXY
+
 # > Bahamut
 USER-AGENT,Anime*,PROXY
 DOMAIN-SUFFIX,bahamut.com.tw,PROXY
 DOMAIN-SUFFIX,gamer.com.tw,PROXY
 DOMAIN-SUFFIX,hinet.net,PROXY
+
 # > myTV_SUPER
 USER-AGENT,mytv*,PROXY
 DOMAIN-SUFFIX,mytvsuper.com,PROXY
 DOMAIN-SUFFIX,tvb.com,PROXY
+
 # > AbemaTV
 USER-AGENT,AbemaTV*,PROXY
 DOMAIN-SUFFIX,abema.io,PROXY
 DOMAIN-SUFFIX,ameba.jp,PROXY
 DOMAIN-SUFFIX,hayabusa.io,PROXY
 DOMAIN,linear-abematv.akamaized.net,PROXY
+
 # > encoreTVB
 USER-AGENT,encoreTVB*,PROXY
-# > 愛奇藝台灣站
-DOMAIN-SUFFIX,tw.iqiyi.com,PROXY
+
+
 # > PBS
 USER-AGENT,PBS*,PROXY
 DOMAIN-SUFFIX,pbs.org,PROXY
+
 # > Amazon Prime Video
 USER-AGENT,InstantVideo.US*,PROXY
 USER-AGENT,Prime%20Video*,PROXY
@@ -239,10 +235,12 @@ USER-AGENT,Spotify*,PROXY
 DOMAIN-SUFFIX,scdn.co,PROXY
 DOMAIN-SUFFIX,spotify.com,PROXY
 DOMAIN-SUFFIX,spoti.fi,PROXY
+
 # > JOOX
 USER-AGENT,WeMusic*,PROXY
 USER-AGENT,JOOX*,PROXY
 DOMAIN-SUFFIX,joox.com,PROXY
+
 # > Pandora
 DOMAIN-SUFFIX,pandora.com,PROXY
 
@@ -284,11 +282,7 @@ DOMAIN-SUFFIX,twimg.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,twitpic.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,vine.co,PROXY,force-remote-dns
 DOMAIN-KEYWORD,twitter,PROXY,force-remote-dns
-# > Line
-DOMAIN-SUFFIX,line.me,PROXY,force-remote-dns
-DOMAIN-SUFFIX,line-apps.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,line-scdn.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,naver.jp,PROXY,force-remote-dns
+
 # > Other
 DOMAIN-SUFFIX,4shared.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,881903.com,PROXY,force-remote-dns
@@ -552,18 +546,17 @@ DOMAIN-SUFFIX,appsto.re,PROXY
 DOMAIN,beta.itunes.apple.com,PROXY
 # > iBooks Store download
 DOMAIN,books.itunes.apple.com,PROXY
-# > iTunes Store Moveis Trailers
-DOMAIN,hls.itunes.apple.com,PROXY
+
 # App Store Preview
 DOMAIN,itunes.apple.com,PROXY
+
 # > Spotlight
 DOMAIN,api-glb-sea.smoot.apple.com,PROXY
+
 # > Dictionary
 DOMAIN,lookup-api.apple.com,PROXY
 PROCESS-NAME,LookupViewService,PROXY
-# > Apple News
-PROCESS-NAME,News,PROXY
-USER-AGENT,AppleNews*,PROXY
+
 # > Google
 DOMAIN-SUFFIX,abc.xyz,PROXY
 DOMAIN-SUFFIX,android.com,PROXY
@@ -609,18 +602,22 @@ DOMAIN-SUFFIX,x.company,PROXY
 DOMAIN-SUFFIX,youtu.be,PROXY
 DOMAIN-SUFFIX,yt.be,PROXY
 DOMAIN-SUFFIX,ytimg.com,PROXY
+
 # > Akamai
 # DOMAIN-SUFFIX,akamai.net,PROXY
 # DOMAIN-SUFFIX,akamaistream.net,PROXY
 # DOMAIN-SUFFIX,akamaized.net,PROXY
 DOMAIN-SUFFIX,akamaihd.net,PROXY
+
 # > Steam
 DOMAIN,media.steampowered.com,PROXY
 DOMAIN,store.steampowered.com,PROXY
+
 # > Supercell
 DOMAIN-SUFFIX,brawlstars.com,PROXY
 DOMAIN-SUFFIX,brawlstarsgame.com,PROXY
 DOMAIN-SUFFIX,supercell.com,PROXY
+
 # > Other
 DOMAIN-SUFFIX,0rz.tw,PROXY
 DOMAIN-SUFFIX,4bluestones.biz,PROXY
@@ -677,6 +674,7 @@ DOMAIN-SUFFIX,wn.com,PROXY
 DOMAIN-SUFFIX,wolframalpha.com,PROXY
 DOMAIN-SUFFIX,x-art.com,PROXY
 DOMAIN-SUFFIX,yimg.com,PROXY
+
 # > Telegram
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,91.108.8.0/22,PROXY,no-resolve
@@ -696,11 +694,13 @@ DOMAIN-SUFFIX,icloud.com,DIRECT
 DOMAIN-SUFFIX,icloud-content.com,DIRECT
 DOMAIN-SUFFIX,me.com,DIRECT
 DOMAIN-SUFFIX,mzstatic.com,DIRECT
+
 # > Microsoft
 DOMAIN-SUFFIX,microsoft.com,DIRECT
 DOMAIN-SUFFIX,windows.net,DIRECT
 DOMAIN-SUFFIX,sfx.ms,DIRECT
 DOMAIN-KEYWORD,officecdn,DIRECT
+
 # > Blizzard
 DOMAIN-SUFFIX,blizzard.com,DIRECT
 DOMAIN-SUFFIX,battle.net,DIRECT
