--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -168,6 +168,8 @@ DOMAIN,track.tenjin.io,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
 
 //me
+IP-CIDR,140.101.144.98/32,PROXY
+DOMAIN-SUFFIX,live.net,PROXY
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 DOMAIN-SUFFIX,ampproject.org,PROXY
 DOMAIN-SUFFIX,beautylegmm.com,PROXY
