--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -647,7 +647,7 @@ DOMAIN-SUFFIX,icloud.com,DIRECT
 DOMAIN-SUFFIX,icloud-content.com,DIRECT
 DOMAIN-SUFFIX,me.com,DIRECT
 DOMAIN-SUFFIX,mzstatic.com,DIRECT
-IP-CIDR,17.0.0.0/8,DIRECT
+IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
 
 DOMAIN-SUFFIX,microsoft.com,DIRECT
 DOMAIN-SUFFIX,windows.net,DIRECT
@@ -735,11 +735,13 @@ URL-REGEX,ed2k*,DIRECT
 URL-REGEX,magnet*,DIRECT
 URL-REGEX,*(360|so)\.(cn|com),REJECT
 URL-REGEX,(torrent|*\.torrent|peer_id=*|announce|info_hash|get_peers|find_node|BitTorrent|announce_peer|protocol|*\.php\?passkey=*),DIRECT
+
 DOMAIN-SUFFIX,local,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
+
 GEOIP,CN,DIRECT
 FINAL,PROXY
