--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -596,7 +596,7 @@ DOMAIN-SUFFIX,windows.net,策略
 DOMAIN-SUFFIX,windowsupdate.com,策略
 
 //Apple
-IP-CIDR,17.0.0.0/8,策略
+IP-CIDR,17.0.0.0/8,策略,no-resolve
 DOMAIN,appleiphonecell.com,策略
 USER-AGENT,AppStore*,策略
 USER-AGENT,com.apple.appstored*,策略
@@ -614,6 +614,45 @@ DOMAIN-SUFFIX,icloud.com,策略
 DOMAIN-SUFFIX,icloud-content.com,策略
 DOMAIN-SUFFIX,itunes.com,策略
 DOMAIN-SUFFIX,itunes-apple.com.akadns.net,策略
+
+// Amazon
+IP-CIDR,13.32.0.0/16,PROXY,no-resolve
+IP-CIDR,13.33.0.0/16,PROXY,no-resolve
+IP-CIDR,13.35.0.0/17,PROXY,no-resolve
+IP-CIDR,18.184.0.0/15,PROXY,no-resolve
+IP-CIDR,18.194.0.0/15,PROXY,no-resolve
+IP-CIDR,18.208.0.0/13,PROXY,no-resolve
+IP-CIDR,18.232.0.0/14,PROXY,no-resolve
+IP-CIDR,52.200.0.0/13,PROXY,no-resolve
+IP-CIDR,52.58.0.0/15,PROXY,no-resolve
+IP-CIDR,52.74.0.0/16,PROXY,no-resolve
+IP-CIDR,52.77.0.0/16,PROXY,no-resolve
+IP-CIDR,52.84.0.0/15,PROXY,no-resolve
+IP-CIDR,54.156.0.0/14,PROXY,no-resolve
+IP-CIDR,54.226.0.0/15,PROXY,no-resolve
+IP-CIDR,54.230.156.0/22,PROXY,no-resolve
+IP-CIDR,54.93.0.0/16,PROXY,no-resolve
+
+// Facebook
+IP-CIDR,103.4.96.0/22,PROXY,no-resolve
+IP-CIDR,129.134.0.0/17,PROXY,no-resolve
+IP-CIDR,157.240.0.0/17,PROXY,no-resolve
+IP-CIDR,173.252.64.0/19,PROXY,no-resolve
+IP-CIDR,173.252.96.0/19,PROXY,no-resolve
+IP-CIDR,179.60.192.0/22,PROXY,no-resolve
+IP-CIDR,185.60.216.0/22,PROXY,no-resolve
+IP-CIDR,204.15.20.0/22,PROXY,no-resolve
+IP-CIDR,31.13.24.0/21,PROXY,no-resolve
+IP-CIDR,31.13.64.0/18,PROXY,no-resolve
+IP-CIDR,45.64.40.0/22,PROXY,no-resolve
+IP-CIDR,66.220.144.0/20,PROXY,no-resolve
+IP-CIDR,69.171.224.0/19,PROXY,no-resolve
+IP-CIDR,69.63.176.0/20,PROXY,no-resolve
+IP-CIDR,74.119.76.0/22,PROXY,no-resolve
+
+// Google
+IP-CIDR,173.194.0.0/16,PROXY,no-resolve
+IP-CIDR,74.125.0.0/16,PROXY,no-resolve
 
 DOMAIN-SUFFIX,abc.xyz,PROXY
 DOMAIN-SUFFIX,android.com,PROXY
@@ -720,17 +759,12 @@ DOMAIN-SUFFIX,wn.com,PROXY
 DOMAIN-SUFFIX,wolframalpha.com,PROXY
 DOMAIN-SUFFIX,x-art.com,PROXY
 DOMAIN-SUFFIX,yimg.com,PROXY
+
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,91.108.8.0/22,PROXY,no-resolve
 IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.160.0/20,PROXY,no-resolve
-
-
-DOMAIN-SUFFIX,microsoft.com,DIRECT
-DOMAIN-SUFFIX,windows.net,DIRECT
-DOMAIN-SUFFIX,sfx.ms,DIRECT
-DOMAIN-KEYWORD,officecdn,DIRECT
 
 
 DOMAIN-SUFFIX,blizzard.com,DIRECT
