--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -205,6 +205,7 @@ DOMAIN-SUFFIX,alexametrics.com,REJECT
 
 //me
 
+DOMAIN-SUFFIX,digicert.com,PROXY //ssl证书
 DOMAIN-SUFFIX,ampproject.net,PROXY
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 IP-CIDR,140.101.144.98/32,PROXY
