--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -52,6 +52,7 @@ DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
 DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
 //me
+
 DOMAIN-SUFFIX,mmstat.com,REJECT
 DOMAIN-SUFFIX,tanx.com,REJECT
 DOMAIN-KEYWORD,ads,REJECT
@@ -204,7 +205,7 @@ DOMAIN,track.tenjin.io,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
 
 //me
-
+DOMAIN-SUFFIX,crashlytics.com,DIRECT
 DOMAIN-SUFFIX,digicert.com,PROXY //ssl证书
 DOMAIN-SUFFIX,ampproject.net,PROXY
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
