--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -205,12 +205,13 @@ DOMAIN,track.tenjin.io,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
 
 //me
+IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
+DOMAIN-SUFFIX,cordcloud.cc,PROXY
 DOMAIN-SUFFIX,crashlytics.com,DIRECT
 DOMAIN-SUFFIX,digicert.com,PROXY //ssl证书
 DOMAIN-SUFFIX,ampproject.net,PROXY
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 IP-CIDR,140.101.144.98/32,PROXY
-DOMAIN-SUFFIX,live.net,PROXY
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 DOMAIN-SUFFIX,ampproject.org,PROXY
 DOMAIN-SUFFIX,beautylegmm.com,PROXY
@@ -229,7 +230,6 @@ DOMAIN-SUFFIX,ssr.sh,PROXY
 DOMAIN-SUFFIX,cordcloud.cc,PROXY
 DOMAIN-SUFFIX,sehuatang.org,PROXY
 DOMAIN-SUFFIX,zaobao.com,PROXY
-DOMAIN-KEYWORD,github,PROXY,force-remote-dns
 DOMAIN-SUFFIX,maying.co,PROXY
 DOMAIN,content.jwplatform.com,PROXY
 DOMAIN,videos-f.jwpsrv.com,PROXY
@@ -778,8 +778,10 @@ DOMAIN-KEYWORD,steamcdn,DIRECT
 DOMAIN-KEYWORD,steamstore,DIRECT
 DOMAIN-KEYWORD,steamuserimages,DIRECT
 DOMAIN-KEYWORD,steambroadcast,DIRECT
+
 USER-AGENT,MicroMessenger Client,DIRECT
 USER-AGENT,WeChat*,DIRECT
+
 DOMAIN-SUFFIX,qq.com,DIRECT
 DOMAIN-SUFFIX,qpic.cn,DIRECT
 DOMAIN-SUFFIX,alibaba.com,DIRECT
