--- a/kitsunebi.conf
+++ b/kitsunebi.conf
@@ -556,52 +556,52 @@ DOMAIN,wego.here.com,PROXY
 USER-AGENT,Roam*,PROXY
 
 // Microsoft
-USER-AGENT,Microsoft*,策略
-USER-AGENT,OneDrive*,策略
-DOMAIN-KEYWORD,microsoft,策略
-DOMAIN-SUFFIX,bing.com,策略
-DOMAIN-SUFFIX,bing.net,策略
-DOMAIN-SUFFIX,cloudappsecurity.com,策略
-DOMAIN-SUFFIX,docs.com,策略
-DOMAIN-SUFFIX,hotmail.com,策略
-DOMAIN-SUFFIX,live.com,策略
-DOMAIN-SUFFIX,live.net,策略
-DOMAIN-SUFFIX,microsoft.com,策略
-DOMAIN-SUFFIX,msedge.net,策略
-DOMAIN-SUFFIX,msn.com,策略
-DOMAIN-SUFFIX,office.com,策略
-DOMAIN-SUFFIX,office.net,策略
-DOMAIN-SUFFIX,office365.com,策略
-DOMAIN-SUFFIX,onedrive.com,策略
-DOMAIN-SUFFIX,onenote.com,策略
-DOMAIN-SUFFIX,onenote.net,策略
-DOMAIN-SUFFIX,onmicrosoft.com,策略
-DOMAIN-SUFFIX,outlook.com,策略
-DOMAIN-SUFFIX,outlookgroups.ms,策略
-DOMAIN-SUFFIX,visualstudio.com,策略
-DOMAIN-SUFFIX,windows.com,策略
-DOMAIN-SUFFIX,windows.net,策略
-DOMAIN-SUFFIX,windowsupdate.com,策略
+USER-AGENT,Microsoft*,PROXY
+USER-AGENT,OneDrive*,PROXY
+DOMAIN-KEYWORD,microsoft,PROXY
+DOMAIN-SUFFIX,bing.com,PROXY
+DOMAIN-SUFFIX,bing.net,PROXY
+DOMAIN-SUFFIX,cloudappsecurity.com,PROXY
+DOMAIN-SUFFIX,docs.com,PROXY
+DOMAIN-SUFFIX,hotmail.com,PROXY
+DOMAIN-SUFFIX,live.com,PROXY
+DOMAIN-SUFFIX,live.net,PROXY
+DOMAIN-SUFFIX,microsoft.com,PROXY
+DOMAIN-SUFFIX,msedge.net,PROXY
+DOMAIN-SUFFIX,msn.com,PROXY
+DOMAIN-SUFFIX,office.com,PROXY
+DOMAIN-SUFFIX,office.net,PROXY
+DOMAIN-SUFFIX,office365.com,PROXY
+DOMAIN-SUFFIX,onedrive.com,PROXY
+DOMAIN-SUFFIX,onenote.com,PROXY
+DOMAIN-SUFFIX,onenote.net,PROXY
+DOMAIN-SUFFIX,onmicrosoft.com,PROXY
+DOMAIN-SUFFIX,outlook.com,PROXY
+DOMAIN-SUFFIX,outlookgroups.ms,PROXY
+DOMAIN-SUFFIX,visualstudio.com,PROXY
+DOMAIN-SUFFIX,windows.com,PROXY
+DOMAIN-SUFFIX,windows.net,PROXY
+DOMAIN-SUFFIX,windowsupdate.com,PROXY
 
 //Apple
-IP-CIDR,17.0.0.0/8,策略,no-resolve
-DOMAIN,appleiphonecell.com,策略
-USER-AGENT,AppStore*,策略
-USER-AGENT,com.apple.appstored*,策略
-USER-AGENT,cloudd*,策略
-DOMAIN-KEYWORD,icloud,策略
-DOMAIN-KEYWORD,itunes,策略
-DOMAIN-SUFFIX,aaplimg.com,策略
-DOMAIN-SUFFIX,apple.co,策略
-DOMAIN-SUFFIX,apple.com,策略
-DOMAIN-SUFFIX,appsto.re,策略
-DOMAIN-SUFFIX,cdn-apple.com,策略
-DOMAIN-SUFFIX,me.com,策略
-DOMAIN-SUFFIX,mzstatic.com,策略
-DOMAIN-SUFFIX,icloud.com,策略
-DOMAIN-SUFFIX,icloud-content.com,策略
-DOMAIN-SUFFIX,itunes.com,策略
-DOMAIN-SUFFIX,itunes-apple.com.akadns.net,策略
+IP-CIDR,17.0.0.0/8,PROXY,no-resolve
+DOMAIN,appleiphonecell.com,PROXY
+USER-AGENT,AppStore*,PROXY
+USER-AGENT,com.apple.appstored*,PROXY
+USER-AGENT,cloudd*,PROXY
+DOMAIN-KEYWORD,icloud,PROXY
+DOMAIN-KEYWORD,itunes,PROXY
+DOMAIN-SUFFIX,aaplimg.com,PROXY
+DOMAIN-SUFFIX,apple.co,PROXY
+DOMAIN-SUFFIX,apple.com,PROXY
+DOMAIN-SUFFIX,appsto.re,PROXY
+DOMAIN-SUFFIX,cdn-apple.com,PROXY
+DOMAIN-SUFFIX,me.com,PROXY
+DOMAIN-SUFFIX,mzstatic.com,PROXY
+DOMAIN-SUFFIX,icloud.com,PROXY
+DOMAIN-SUFFIX,icloud-content.com,PROXY
+DOMAIN-SUFFIX,itunes.com,PROXY
+DOMAIN-SUFFIX,itunes-apple.com.akadns.net,PROXY
 
 // Amazon
 IP-CIDR,13.32.0.0/16,PROXY,no-resolve
