--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -235,11 +235,11 @@ DOMAIN-SUFFIX,maying.co,PROXY
 DOMAIN,content.jwplatform.com,PROXY
 DOMAIN,videos-f.jwpsrv.com,PROXY
 
-USER-AGENT,*youtube*,PROXY,force-remote-dns
-USER-AGENT,YouTube*,PROXY,force-remote-dns
-DOMAIN-SUFFIX,googlevideo.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,youtube.com,PROXY,force-remote-dns
-DOMAIN,youtubei.googleapis.com,PROXY,force-remote-dns
+USER-AGENT,*youtube*,油管,force-remote-dns
+USER-AGENT,YouTube*,油管,force-remote-dns
+DOMAIN-SUFFIX,googlevideo.com,油管,force-remote-dns
+DOMAIN-SUFFIX,youtube.com,油管,force-remote-dns
+DOMAIN,youtubei.googleapis.com,油管,force-remote-dns
 
 USER-AGENT,Argo*,PROXY
 DOMAIN-SUFFIX,netflix.com,PROXY
