--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -51,8 +51,15 @@ DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
 DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
 DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
-//me
 
+# > Exclusions
+DOMAIN,analytics.google.com,PROXY
+DOMAIN,analyticsinsights-pa.googleapis.com,PROXY
+DOMAIN,analyticsreporting.googleapis.com,PROXY
+DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
+
+//me
+URL-REGEX,*(360|so)\.(cn|com),REJECT
 DOMAIN-SUFFIX,mmstat.com,REJECT
 DOMAIN-SUFFIX,tanx.com,REJECT
 DOMAIN-KEYWORD,ads,REJECT
@@ -61,6 +68,7 @@ DOMAIN-SUFFIX,doubleclick.net,REJECT
 DOMAIN-SUFFIX,data.flurry.com,REJECT
 DOMAIN-SUFFIX,qchannel01.cn,REJECT
 DOMAIN-SUFFIX,itsdata.map.baidu.com,REJECT
+
 DOMAIN-SUFFIX,hmma.baidu.com,REJECT
 DOMAIN-SUFFIX,nuomi.com,REJECT
 DOMAIN-SUFFIX,adjust.com,REJECT
@@ -78,7 +86,7 @@ DOMAIN-SUFFIX,mopub.com,REJECT
 DOMAIN-SUFFIX,mob.com,REJECT
 DOMAIN-SUFFIX,inmobi.cn,REJECT
 DOMAIN-SUFFIX,inmobi.com,REJECT
-DOMAIN-SUFFIX,113.105.248.169,REJECT
+DOMAIN-SUFFIX,113.105.248.169/32,REJECT
 DOMAIN-SUFFIX,51.la,REJECT
 DOMAIN-SUFFIX,51la.net,REJECT
 DOMAIN-SUFFIX,8cnd.com,REJECT
@@ -205,6 +213,44 @@ DOMAIN-SUFFIX,tlnk.io,REJECT
 DOMAIN,track.tenjin.io,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
 
+# > Baidu
+DOMAIN-SUFFIX,baidustatic.com,REJECT
+DOMAIN,afd.baidu.com,REJECT
+DOMAIN,duclick.baidu.com,REJECT
+DOMAIN,hm.baidu.com,REJECT
+DOMAIN,hmma.baidu.com,REJECT
+DOMAIN,mobads.baidu.com,REJECT
+DOMAIN,mobads-logs.baidu.com,REJECT
+DOMAIN,nsclick.baidu.com,REJECT
+DOMAIN,wn.pos.baidu.com,REJECT
+# > Alibaba
+DOMAIN,acs4baichuan.m.taobao.com,REJECT
+DOMAIN,adash.m.taobao.com,REJECT
+DOMAIN,adash.man.aliyuncs.com,REJECT
+DOMAIN,adashbc.ut.taobao.com,REJECT
+DOMAIN,adash-c.ut.taobao.com,REJECT
+DOMAIN,adashxgc.ut.taobao.com,REJECT
+DOMAIN,adashx4yt.m.taobao.com,REJECT
+DOMAIN,amdc.m.taobao.com,REJECT
+DOMAIN,apoll.m.taobao.com,REJECT
+DOMAIN,nbsdk-baichuan.alicdn.com,REJECT
+DOMAIN,tunion-api.m.taobao.com,REJECT
+
+# > Tencent
+DOMAIN-SUFFIX,bugly.qq.com,REJECT
+DOMAIN-SUFFIX,e.qq.com,REJECT
+DOMAIN-SUFFIX,gdt.qq.com,REJECT
+DOMAIN-SUFFIX,l.qq.com,REJECT
+DOMAIN-SUFFIX,rqd.qq.com,REJECT
+DOMAIN,btrace.qq.com,REJECT
+DOMAIN,mtrace.qq.com,REJECT
+DOMAIN,oth.eve.mdt.qq.com,REJECT
+DOMAIN,pgdt.gtimg.cn,REJECT
+DOMAIN,pingma.qq.com,REJECT
+DOMAIN,pingtcss.qq.com,REJECT
+DOMAIN,splashqqlive.gtimg.com,REJECT
+DOMAIN,tajs.qq.com,REJECT
+
 //me
 IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
 DOMAIN-SUFFIX,cordcloud.cc,PROXY
@@ -235,6 +281,7 @@ DOMAIN-SUFFIX,maying.co,PROXY
 DOMAIN,content.jwplatform.com,PROXY
 DOMAIN,videos-f.jwpsrv.com,PROXY
 
+//油管
 USER-AGENT,*youtube*,油管,force-remote-dns
 USER-AGENT,YouTube*,油管,force-remote-dns
 DOMAIN-SUFFIX,googlevideo.com,油管,force-remote-dns
@@ -274,6 +321,7 @@ DOMAIN-SUFFIX,pbs.org,PROXY
 USER-AGENT,InstantVideo.US*,PROXY
 USER-AGENT,Prime%20Video*,PROXY
 
+//Spotify
 USER-AGENT,Spotify*,PROXY
 DOMAIN-SUFFIX,scdn.co,PROXY
 DOMAIN-SUFFIX,spotify.com,PROXY
@@ -850,10 +898,6 @@ IP-CIDR,1.255.62.0/24,DIRECT,no-resolve
 
 // Accelerate direct sites
 DOMAIN-KEYWORD,torrent,DIRECT
-URL-REGEX,ed2k*,DIRECT
-URL-REGEX,magnet*,DIRECT
-URL-REGEX,*(360|so)\.(cn|com),REJECT
-URL-REGEX,(torrent|*\.torrent|peer_id=*|announce|info_hash|get_peers|find_node|BitTorrent|announce_peer|protocol|*\.php\?passkey=*),DIRECT
 
 DOMAIN-SUFFIX,local,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
