--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -218,18 +218,14 @@ DOMAIN,hmma.baidu.com,REJECT
 DOMAIN,mobads.baidu.com,REJECT
 DOMAIN,mobads-logs.baidu.com,REJECT
 DOMAIN,nsclick.baidu.com,REJECT
-DOMAIN,wn.pos.baidu.com,REJECT
+DOMAIN-SUFFIX,adscdn.baidu.com,REJECT
+
 # > Alibaba
-DOMAIN,acs4baichuan.m.taobao.com,REJECT
 DOMAIN,adash.m.taobao.com,REJECT
-DOMAIN,adash.man.aliyuncs.com,REJECT
-DOMAIN,adashbc.ut.taobao.com,REJECT
-DOMAIN,adash-c.ut.taobao.com,REJECT
-DOMAIN,adashxgc.ut.taobao.com,REJECT
-DOMAIN,adashx4yt.m.taobao.com,REJECT
+DOMAIN-SUFFIX,c-adash.m.taobao.com,REJECT
+DOMAIN-SUFFIX,m-adash.m.taobao.com,REJECT
 DOMAIN,amdc.m.taobao.com,REJECT
 DOMAIN,apoll.m.taobao.com,REJECT
-DOMAIN,nbsdk-baichuan.alicdn.com,REJECT
 DOMAIN,tunion-api.m.taobao.com,REJECT
 
 # > Tencent
