--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -57,11 +57,15 @@ DOMAIN,analytics.google.com,PROXY
 DOMAIN,analyticsinsights-pa.googleapis.com,PROXY
 DOMAIN,analyticsreporting.googleapis.com,PROXY
 DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
+DOMAIN-SUFFIX,goodreads.com,PROXY,force-remote-dns
 
 //me
 URL-REGEX,*(360|so)\.(cn|com),REJECT
 DOMAIN-SUFFIX,mmstat.com,REJECT
 DOMAIN-SUFFIX,tanx.com,REJECT
+
+
+DOMAIN-KEYWORD,click,REJECT
 DOMAIN-KEYWORD,ads,REJECT
 DOMAIN-SUFFIX,appbaqend.com,REJECT
 DOMAIN-SUFFIX,doubleclick.net,REJECT
@@ -78,13 +82,14 @@ DOMAIN,mps.amap.com,REJECT
 DOMAIN,aos-cdn-image.amap.com,REJECT
 DOMAIN,wb.amap.com,REJECT
 DOMAIN,f.amap.com,REJECT
-DOMAIN-KEYWORD,adservice,REJECT
+
+DOMAIN-KEYWORD,analysys,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,analysis,REJECT
 DOMAIN-SUFFIX,mopub.com,REJECT
 DOMAIN-SUFFIX,mob.com,REJECT
-DOMAIN-SUFFIX,inmobi.cn,REJECT
-DOMAIN-SUFFIX,inmobi.com,REJECT
+DOMAIN-KEYWORD,inmobi,REJECT
+DOMAIN-SUFFIX,miaozhen.com,REJECT
 DOMAIN-SUFFIX,113.105.248.169/32,REJECT
 DOMAIN-SUFFIX,51.la,REJECT
 DOMAIN-SUFFIX,51la.net,REJECT
@@ -92,7 +97,6 @@ DOMAIN-SUFFIX,8cnd.com,REJECT
 DOMAIN-SUFFIX,a-m-s.adnonstop.com,REJECT
 DOMAIN-SUFFIX,analy.tuniu.cn,REJECT
 DOMAIN-SUFFIX,analyse.weather.com.cn,REJECT
-DOMAIN-SUFFIX,analysis.chinaiiss.com,REJECT
 DOMAIN-SUFFIX,apistat.gao7.com,REJECT
 DOMAIN-SUFFIX,apistat.wasu.cn,REJECT
 DOMAIN-SUFFIX,bc.qunar.com,REJECT
@@ -101,7 +105,6 @@ DOMAIN-SUFFIX,carstat.bitauto.com,REJECT
 DOMAIN-SUFFIX,cbjg.cqnews.net,REJECT
 DOMAIN-SUFFIX,cdnlog.zhenai.com,REJECT
 DOMAIN-SUFFIX,cig.com.cn,REJECT
-DOMAIN-SUFFIX,click.tianyaui.com,REJECT
 DOMAIN-SUFFIX,cnpc.infzm.com,REJECT
 DOMAIN-SUFFIX,count.candou.com,REJECT
 DOMAIN-SUFFIX,count.enet.com.cn,REJECT
@@ -181,10 +184,8 @@ DOMAIN-SUFFIX,tj.21ic.com,REJECT
 DOMAIN-SUFFIX,tjj.com,REJECT
 DOMAIN-SUFFIX,tongji.mafengwo.cn,REJECT
 DOMAIN-SUFFIX,tongji.xinmin.cn,REJECT
-DOMAIN-SUFFIX,track.hujiang.com,REJECT
-DOMAIN-SUFFIX,track.uc.cn,REJECT
 DOMAIN-SUFFIX,vm.aty.sohu.com,REJECT
-DOMAIN-SUFFIX,track,REJECT
+DOMAIN-KEYWORD,track,REJECT
 DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
 DOMAIN-KEYWORD,cnzz,REJECT
 DOMAIN-KEYWORD,umeng,REJECT
@@ -203,24 +204,31 @@ DOMAIN-SUFFIX,applovin.com,REJECT
 DOMAIN,union.uc.cn,REJECT
 DOMAIN,ad-stat.ksosoft.com,REJECT
 DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
-DOMAIN-SUFFIX,ksosoft.com,REJECT
 USER-AGENT,wpsoffice*,REJECT
 DOMAIN-SUFFIX,tlnk.io,REJECT
-DOMAIN,track.tenjin.io,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
 
 # > Baidu
+DOMAIN,api.map.baidu.com,REJECT
+DOMAIN,ps.map.baidu.com,REJECT
+DOMAIN,sv.map.baidu.com,REJECT
+DOMAIN,offnavi.map.baidu.com,REJECT
+DOMAIN,newvector.map.baidu.com,REJECT
+DOMAIN,DOMAIN,newloc.map.n.shifen.com,REJECT
+DOMAIN,ulog.imap.baidu.com,REJECT
+DOMAIN,sv.map.baidu.com,REJECT
+DOMAIN-SUFFIX,data.haoma.sogou.com,REJECT
+DOMAIN-SUFFIX,sp0.baidu.com,REJECT
+DOMAIN-SUFFIX,udpolimenew.baidu.com,REJECT
+DOMAIN-SUFFIX,hpd.baidu.com,REJECT
 DOMAIN-SUFFIX,baidustatic.com,REJECT
 DOMAIN,afd.baidu.com,REJECT
-DOMAIN,duclick.baidu.com,REJECT
 DOMAIN,hm.baidu.com,REJECT
 DOMAIN,hmma.baidu.com,REJECT
-DOMAIN,mobads.baidu.com,REJECT
 DOMAIN,mobads-logs.baidu.com,REJECT
-DOMAIN,nsclick.baidu.com,REJECT
-DOMAIN-SUFFIX,adscdn.baidu.com,REJECT
 
 # > Alibaba
+DOMAIN-SUFFIX,linezing.com,REJECT
 DOMAIN,adash.m.taobao.com,REJECT
 DOMAIN-SUFFIX,c-adash.m.taobao.com,REJECT
 DOMAIN-SUFFIX,m-adash.m.taobao.com,REJECT
@@ -229,6 +237,9 @@ DOMAIN,apoll.m.taobao.com,REJECT
 DOMAIN,tunion-api.m.taobao.com,REJECT
 
 # > Tencent
+DOMAIN,report.vip.qq.com,REJECT
+DOMAIN,report.huatuo.qq.com,REJECT
+DOMAIN,report.qcloud.com,REJECT
 DOMAIN-SUFFIX,bugly.qq.com,REJECT
 DOMAIN-SUFFIX,e.qq.com,REJECT
 DOMAIN-SUFFIX,gdt.qq.com,REJECT
@@ -603,7 +614,6 @@ DOMAIN-SUFFIX,getlantern.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,getsync.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,globalvoices.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,goo.ne.jp,PROXY,force-remote-dns
-DOMAIN-SUFFIX,goodreads.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gov.tw,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gumroad.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,hbg.com,PROXY,force-remote-dns
