--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -807,7 +807,7 @@ DOMAIN-SUFFIX,windows.net,策略
 DOMAIN-SUFFIX,windowsupdate.com,策略
 
 //Apple
-IP-CIDR,17.0.0.0/8,策略,no-resolve
+IP-CIDR,17.0.0.0/8,策略
 DOMAIN,appleiphonecell.com,策略
 USER-AGENT,AppStore*,策略
 USER-AGENT,com.apple.appstored*,策略
