--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -214,7 +214,7 @@ DOMAIN,ps.map.baidu.com,REJECT
 DOMAIN,sv.map.baidu.com,REJECT
 DOMAIN,offnavi.map.baidu.com,REJECT
 DOMAIN,newvector.map.baidu.com,REJECT
-DOMAIN,DOMAIN,newloc.map.n.shifen.com,REJECT
+DOMAIN,newloc.map.n.shifen.com,REJECT
 DOMAIN,ulog.imap.baidu.com,REJECT
 DOMAIN,sv.map.baidu.com,REJECT
 DOMAIN-SUFFIX,data.haoma.sogou.com,REJECT
