--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -425,7 +425,7 @@ IP-CIDR,78.140.131.214/32,REJECT,no-resolve
 DOMAIN-SUFFIX,muncloud.com,PROXY
 IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
 DOMAIN-SUFFIX,cordcloud.cc,PROXY
-DOMAIN-SUFFIX,crashlytics.com,DIRECT
+DOMAIN,e.crashlytics.com,DIRECT
 DOMAIN-SUFFIX,digicert.com,PROXY //ssl证书
 DOMAIN-SUFFIX,ampproject.net,PROXY
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
@@ -447,6 +447,7 @@ DOMAIN-SUFFIX,evernote.com,PROXY
 DOMAIN-SUFFIX,ssr.sh,PROXY
 DOMAIN-SUFFIX,cordcloud.cc,PROXY
 DOMAIN-SUFFIX,sehuatang.org,PROXY
+DOMAIN-SUFFIX,sehuatang.com,PROXY
 DOMAIN-SUFFIX,zaobao.com,PROXY
 DOMAIN-SUFFIX,maying.co,PROXY
 DOMAIN,content.jwplatform.com,PROXY
@@ -1206,6 +1207,7 @@ URL-REGEX,magnet*,DIRECT
 
 
 GEOIP,CN,DIRECT
+GEOIP,US,PROXY
 FINAL,PROXY
 
 [GLOBAL]
