--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -422,7 +422,8 @@ IP-CIDR,74.117.182.77/32,REJECT,no-resolve
 IP-CIDR,78.140.131.214/32,REJECT,no-resolve
 
 //me
-DOMAIN-SUFFIX,muncloud.com,PROXY
+DOMAIN-KEYWORD,porn,PROXY,force-remote-dns
+DOMAIN-SUFFIX,muncloud.com,PROXY,force-remote-dns
 IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
 DOMAIN-SUFFIX,cordcloud.cc,PROXY
 DOMAIN,e.crashlytics.com,DIRECT
@@ -446,12 +447,13 @@ DOMAIN-SUFFIX,helpshift.com,PROXY
 DOMAIN-SUFFIX,evernote.com,PROXY
 DOMAIN-SUFFIX,ssr.sh,PROXY
 DOMAIN-SUFFIX,cordcloud.cc,PROXY
-DOMAIN-SUFFIX,sehuatang.org,PROXY
-DOMAIN-SUFFIX,sehuatang.com,PROXY
-DOMAIN-SUFFIX,zaobao.com,PROXY
+DOMAIN-SUFFIX,sehuatang.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,sehuatang.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,zaobao.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,maying.co,PROXY
 DOMAIN,content.jwplatform.com,PROXY
 DOMAIN,videos-f.jwpsrv.com,PROXY
+
 
 USER-AGENT,Argo*,PROXY
 DOMAIN-SUFFIX,netflix.com,PROXY
