--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -422,8 +422,6 @@ IP-CIDR,74.117.182.77/32,REJECT,no-resolve
 IP-CIDR,78.140.131.214/32,REJECT,no-resolve
 
 //me
-DOMAIN-KEYWORD,porn,PROXY,force-remote-dns
-DOMAIN-KEYWORD,jav,PROXY,force-remote-dns
 DOMAIN-SUFFIX,muncloud.com,PROXY,force-remote-dns
 IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
 DOMAIN-SUFFIX,cordcloud.cc,PROXY
@@ -667,8 +665,7 @@ DOMAIN-SUFFIX,ok.ru,PROXY,force-remote-dns
 DOMAIN-SUFFIX,okex.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,pcloud.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,pinimg.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,pixiv.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,pornhub.com,PROXY,force-remote-dns
+DOMAIN-KEYWORD,pixiv,PROXY,force-remote-dns
 DOMAIN-SUFFIX,pureapk.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,quora.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,quoracdn.net,PROXY,force-remote-dns
