--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -74,8 +74,7 @@ URL-REGEX,*(360|so)\.(cn|com),REJECT
 DOMAIN-SUFFIX,mmstat.com,REJECT
 DOMAIN-SUFFIX,tanx.com,REJECT
 
-
-DOMAIN-KEYWORD,click,REJECT
+DOMAIN-SUFFIX,umengcloud.com,REJECT
 DOMAIN-KEYWORD,ads,REJECT
 DOMAIN-SUFFIX,appbaqend.com,REJECT
 DOMAIN-SUFFIX,doubleclick.net,REJECT
@@ -218,7 +217,10 @@ USER-AGENT,wpsoffice*,REJECT
 DOMAIN-SUFFIX,tlnk.io,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
 
+
 # > Baidu
+DOMAIN,loc.map.baidu.com,REJECT
+DOMAIN,nsclick.baidu.com,REJECT
 DOMAIN,api.map.baidu.com,REJECT
 DOMAIN,ps.map.baidu.com,REJECT
 DOMAIN,sv.map.baidu.com,REJECT
