--- a/fiter.conf
+++ b/fiter.conf
@@ -403,7 +403,7 @@ DOMAIN-SUFFIX,muncloud.com,PROXY,force-remote-dns
 IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
 DOMAIN-SUFFIX,cordcloud.cc,PROXY,force-remote-dns
 DOMAIN,e.crashlytics.com,DIRECT
-DOMAIN-SUFFIX,digicert.com,PROXY,force-remote-dns //ssl证书
+DOMAIN-SUFFIX,digicert.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ampproject.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 IP-CIDR,140.101.144.98/32,PROXY,force-remote-dns
