--- a/fiter.conf
+++ b/fiter.conf
@@ -406,7 +406,7 @@ DOMAIN,e.crashlytics.com,DIRECT
 DOMAIN-SUFFIX,digicert.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ampproject.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
-IP-CIDR,140.101.144.98/32,PROXY,force-remote-dns
+IP-CIDR,140.101.144.98/32,PROXY
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 DOMAIN-SUFFIX,ampproject.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,beautylegmm.com,PROXY,force-remote-dns
@@ -816,43 +816,43 @@ USER-AGENT,Roam*,PROXY,force-remote-dns
 
 
 // Amazon
-IP-CIDR,13.32.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,13.33.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,13.35.0.0/17,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.184.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.194.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.208.0.0/13,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.232.0.0/14,PROXY,force-remote-dns,no-resolve
-IP-CIDR,52.200.0.0/13,PROXY,force-remote-dns,no-resolve
-IP-CIDR,52.58.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,52.74.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,52.77.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,52.84.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.156.0.0/14,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.226.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.230.156.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.93.0.0/16,PROXY,force-remote-dns,no-resolve
+IP-CIDR,13.32.0.0/16,PROXY,no-resolve
+IP-CIDR,13.33.0.0/16,PROXY,no-resolve
+IP-CIDR,13.35.0.0/17,PROXY,no-resolve
+IP-CIDR,18.184.0.0/15,PROXY,no-resolve
+IP-CIDR,18.194.0.0/15,PROXY,no-resolve
+IP-CIDR,18.208.0.0/13,PROXY,no-resolve
+IP-CIDR,18.232.0.0/14,PROXY,no-resolve
+IP-CIDR,52.200.0.0/13,PROXY,no-resolve
+IP-CIDR,52.58.0.0/15,PROXY,no-resolve
+IP-CIDR,52.74.0.0/16,PROXY,no-resolve
+IP-CIDR,52.77.0.0/16,PROXY,no-resolve
+IP-CIDR,52.84.0.0/15,PROXY,no-resolve
+IP-CIDR,54.156.0.0/14,PROXY,no-resolve
+IP-CIDR,54.226.0.0/15,PROXY,no-resolve
+IP-CIDR,54.230.156.0/22,PROXY,no-resolve
+IP-CIDR,54.93.0.0/16,PROXY,no-resolve
 
 // Facebook
-IP-CIDR,103.4.96.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,129.134.0.0/17,PROXY,force-remote-dns,no-resolve
-IP-CIDR,157.240.0.0/17,PROXY,force-remote-dns,no-resolve
-IP-CIDR,173.252.64.0/19,PROXY,force-remote-dns,no-resolve
-IP-CIDR,173.252.96.0/19,PROXY,force-remote-dns,no-resolve
-IP-CIDR,179.60.192.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,185.60.216.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,204.15.20.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,31.13.24.0/21,PROXY,force-remote-dns,no-resolve
-IP-CIDR,31.13.64.0/18,PROXY,force-remote-dns,no-resolve
-IP-CIDR,45.64.40.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,66.220.144.0/20,PROXY,force-remote-dns,no-resolve
-IP-CIDR,69.171.224.0/19,PROXY,force-remote-dns,no-resolve
-IP-CIDR,69.63.176.0/20,PROXY,force-remote-dns,no-resolve
-IP-CIDR,74.119.76.0/22,PROXY,force-remote-dns,no-resolve
+IP-CIDR,103.4.96.0/22,PROXY,no-resolve
+IP-CIDR,129.134.0.0/17,PROXY,no-resolve
+IP-CIDR,157.240.0.0/17,PROXY,no-resolve
+IP-CIDR,173.252.64.0/19,PROXY,no-resolve
+IP-CIDR,173.252.96.0/19,PROXY,no-resolve
+IP-CIDR,179.60.192.0/22,PROXY,no-resolve
+IP-CIDR,185.60.216.0/22,PROXY,no-resolve
+IP-CIDR,204.15.20.0/22,PROXY,no-resolve
+IP-CIDR,31.13.24.0/21,PROXY,no-resolve
+IP-CIDR,31.13.64.0/18,PROXY,no-resolve
+IP-CIDR,45.64.40.0/22,PROXY,no-resolve
+IP-CIDR,66.220.144.0/20,PROXY,no-resolve
+IP-CIDR,69.171.224.0/19,PROXY,no-resolve
+IP-CIDR,69.63.176.0/20,PROXY,no-resolve
+IP-CIDR,74.119.76.0/22,PROXY,no-resolve
 
 // Google
-IP-CIDR,173.194.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,74.125.0.0/16,PROXY,force-remote-dns,no-resolve
+IP-CIDR,173.194.0.0/16,PROXY,no-resolve
+IP-CIDR,74.125.0.0/16,PROXY,no-resolve
 
 DOMAIN-SUFFIX,abc.xyz,PROXY,force-remote-dns
 DOMAIN-SUFFIX,android.com,PROXY,force-remote-dns
@@ -960,11 +960,11 @@ DOMAIN-SUFFIX,wolframalpha.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,x-art.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,yimg.com,PROXY,force-remote-dns
 
-IP-CIDR,91.108.4.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,91.108.8.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,91.108.56.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,109.239.140.0/24,PROXY,force-remote-dns,no-resolve
-IP-CIDR,149.154.160.0/20,PROXY,force-remote-dns,no-resolve
+IP-CIDR,91.108.4.0/22,PROXY,no-resolve
+IP-CIDR,91.108.8.0/22,PROXY,no-resolve
+IP-CIDR,91.108.56.0/22,PROXY,no-resolve
+IP-CIDR,109.239.140.0/24,PROXY,no-resolve
+IP-CIDR,149.154.160.0/20,PROXY,no-resolve
 
 
 # DIRECT
