--- a/fiter.conf
+++ b/fiter.conf
@@ -432,10 +432,10 @@ DOMAIN,videos-f.jwpsrv.com,PROXY,force-remote-dns
 
 
 //油管
-USER-AGENT,*youtube*,油管,force-remote-dns
-DOMAIN-SUFFIX,googlevideo.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,youtube.com,PROXY,force-remote-dns
-DOMAIN,youtubei.googleapis.com,PROXY,force-remote-dns
+USER-AGENT,*youtube*,olo,force-remote-dns
+DOMAIN-SUFFIX,googlevideo.com,olo,force-remote-dns
+DOMAIN-SUFFIX,youtube.com,olo,force-remote-dns
+DOMAIN,youtubei.googleapis.com,olo,force-remote-dns
 
 // Microsoft
 USER-AGENT,Microsoft*,策略
