--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -428,7 +428,7 @@ DOMAIN-SUFFIX,muncloud.com,PROXY,force-remote-dns
 IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
 DOMAIN-SUFFIX,cordcloud.cc,PROXY,force-remote-dns
 DOMAIN,e.crashlytics.com,DIRECT
-DOMAIN-SUFFIX,digicert.com,PROXY,force-remote-dns //ssl证书
+DOMAIN-SUFFIX,digicert.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ampproject.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 IP-CIDR,140.101.144.98/32,PROXY,force-remote-dns
@@ -457,10 +457,10 @@ DOMAIN,videos-f.jwpsrv.com,PROXY,force-remote-dns
 
 
 //油管
-USER-AGENT,*youtube*,油管,force-remote-dns
-DOMAIN-SUFFIX,googlevideo.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,youtube.com,PROXY,force-remote-dns
-DOMAIN,youtubei.googleapis.com,PROXY,force-remote-dns
+USER-AGENT,*youtube*,olo,force-remote-dns
+DOMAIN-SUFFIX,googlevideo.com,olo,force-remote-dns
+DOMAIN-SUFFIX,youtube.com,olo,force-remote-dns
+DOMAIN,youtubei.googleapis.com,olo,force-remote-dns
 
 // Microsoft
 USER-AGENT,Microsoft*,策略
@@ -841,16 +841,16 @@ USER-AGENT,Roam*,PROXY,force-remote-dns
 
 
 // Amazon
-IP-CIDR,13.32.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,13.33.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,13.35.0.0/17,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.184.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.194.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.208.0.0/13,PROXY,force-remote-dns,no-resolve
-IP-CIDR,18.232.0.0/14,PROXY,force-remote-dns,no-resolve
-IP-CIDR,52.200.0.0/13,PROXY,force-remote-dns,no-resolve
-IP-CIDR,52.58.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,52.74.0.0/16,PROXY,force-remote-dns,no-resolve
+IP-CIDR,13.32.0.0/16,PROXY,no-resolve
+IP-CIDR,13.33.0.0/16,PROXY,no-resolve
+IP-CIDR,13.35.0.0/17,PROXY,no-resolve
+IP-CIDR,18.184.0.0/15,PROXY,no-resolve
+IP-CIDR,18.194.0.0/15,PROXY,no-resolve
+IP-CIDR,18.208.0.0/13,PROXY,no-resolve
+IP-CIDR,18.232.0.0/14,PROXY,no-resolve
+IP-CIDR,52.200.0.0/13,PROXY,no-resolve
+IP-CIDR,52.58.0.0/15,PROXY,no-resolve
+IP-CIDR,52.74.0.0/16,PROXY,no-resolve
 IP-CIDR,52.77.0.0/16,PROXY,force-remote-dns,no-resolve
 IP-CIDR,52.84.0.0/15,PROXY,force-remote-dns,no-resolve
 IP-CIDR,54.156.0.0/14,PROXY,force-remote-dns,no-resolve
