--- a/fiter.conf
+++ b/fiter.conf
@@ -1224,6 +1224,10 @@ DOMAIN,ip.bjango.com,DIRECT // iStat Menu IP Test
 DOMAIN-SUFFIX,alphassl.com,DIRECT
 DOMAIN-SUFFIX,edu.cn,DIRECT
 
+//ali
+ip-cidr, 47.246.16.0/24, direct
+ip-cidr, 205.204.96.0/19, direct
+
 // TeamViewer
 IP-CIDR,185.188.32.0/24,DIRECT,no-resolve
 IP-CIDR,185.188.33.0/24,DIRECT,no-resolve
@@ -1234,5 +1238,4 @@ IP-CIDR,185.188.35.0/24,DIRECT,no-resolve
 DOMAIN-KEYWORD,torrent,DIRECT
 
 GEOIP,CN,DIRECT
-GEOIP,US,PROXY
 FINAL,PROXY
