--- a/fiter.conf
+++ b/fiter.conf
@@ -67,6 +67,214 @@ DOMAIN,aos-cdn-image.amap.com,REJECT
 DOMAIN,wb.amap.com,REJECT
 DOMAIN,f.amap.com,REJECT
 
+DOMAIN-SUFFIX,3lift.com,REJECT
+DOMAIN-SUFFIX,4006825178.com,REJECT
+DOMAIN-SUFFIX,51.la,REJECT
+DOMAIN-SUFFIX,550tg.com,REJECT
+DOMAIN-SUFFIX,56txs4.com,REJECT
+DOMAIN-SUFFIX,ad373.com,REJECT
+DOMAIN-SUFFIX,ad4screen.com,REJECT
+DOMAIN-SUFFIX,ad-brix.com,REJECT
+DOMAIN-SUFFIX,adcolony.com,REJECT
+DOMAIN-SUFFIX,adform.net,REJECT
+DOMAIN-SUFFIX,adinall.com,REJECT
+DOMAIN-SUFFIX,adinfuse.com,REJECT
+DOMAIN-SUFFIX,adjust.com,REJECT
+DOMAIN-SUFFIX,adjust.io,REJECT
+DOMAIN-SUFFIX,adkmob.com,REJECT
+DOMAIN-SUFFIX,adlefee.com,REJECT
+DOMAIN-SUFFIX,admantx.com,REJECT
+DOMAIN-SUFFIX,admarketplace.net,REJECT
+DOMAIN-SUFFIX,admarvel.com,REJECT
+DOMAIN-SUFFIX,admaster.com.cn,REJECT
+DOMAIN-SUFFIX,admob.com,REJECT
+DOMAIN-SUFFIX,adnow.com,REJECT
+DOMAIN-SUFFIX,adnxs.com,REJECT
+DOMAIN-SUFFIX,adsafeprotected.com,REJECT
+DOMAIN-SUFFIX,adsota.com,REJECT
+DOMAIN-SUFFIX,ads-pixiv.net,REJECT
+DOMAIN-SUFFIX,adsrvr.org,REJECT
+DOMAIN-SUFFIX,ads-twitter.com,REJECT
+DOMAIN-SUFFIX,adswizz.com,REJECT
+DOMAIN-SUFFIX,adsymptotic.com,REJECT
+DOMAIN-SUFFIX,adtechus.com,REJECT
+DOMAIN-SUFFIX,adtilt.com,REJECT
+DOMAIN-SUFFIX,adtrue.com,REJECT
+DOMAIN-SUFFIX,advertising.com,REJECT
+DOMAIN-SUFFIX,advertnative.com,REJECT
+DOMAIN-SUFFIX,adview.cn,REJECT
+DOMAIN-SUFFIX,adxpansion.com,REJECT
+DOMAIN-SUFFIX,adxvip.com,REJECT
+DOMAIN-SUFFIX,aerserv.com,REJECT
+DOMAIN-SUFFIX,agkn.com,REJECT
+DOMAIN-SUFFIX,alipaylog.com,REJECT
+DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
+DOMAIN-SUFFIX,analysys.cn,REJECT
+DOMAIN-SUFFIX,app-adforce.jp,REJECT
+DOMAIN-SUFFIX,appads.com,REJECT
+DOMAIN-SUFFIX,appboy.com,REJECT
+DOMAIN-SUFFIX,appier.net,REJECT
+DOMAIN-SUFFIX,applift.com,REJECT
+DOMAIN-SUFFIX,applovin.com,REJECT
+DOMAIN-SUFFIX,appnext.com,REJECT
+DOMAIN-SUFFIX,appodealx.com,REJECT
+DOMAIN-SUFFIX,appsee.com,REJECT
+DOMAIN-SUFFIX,appsflyer.com,REJECT
+DOMAIN-SUFFIX,apptentive.com,REJECT
+DOMAIN-SUFFIX,apptornado.com,REJECT
+DOMAIN-SUFFIX,atdmt.com,REJECT
+DOMAIN-SUFFIX,atwola.com,REJECT
+DOMAIN-SUFFIX,betrad.com,REJECT
+DOMAIN-SUFFIX,bidswitch.com,REJECT
+DOMAIN-SUFFIX,bjytgw.com,REJECT
+DOMAIN-SUFFIX,bttrack.com,REJECT
+DOMAIN-SUFFIX,bxmns.com,REJECT
+DOMAIN-SUFFIX,cappumedia.com,REJECT
+DOMAIN-SUFFIX,celtra.com,REJECT
+DOMAIN-SUFFIX,cferw.com,REJECT
+DOMAIN-SUFFIX,chartbeat.net,REJECT
+DOMAIN-SUFFIX,chartboost.com,REJECT
+DOMAIN-SUFFIX,chitika.com,REJECT
+DOMAIN-SUFFIX,clickhubs.com,REJECT
+DOMAIN-SUFFIX,clickintext.com,REJECT
+DOMAIN-SUFFIX,clickintext.net,REJECT
+DOMAIN-SUFFIX,cloudmobi.net,REJECT
+DOMAIN-SUFFIX,cnadnet.com,REJECT
+DOMAIN-SUFFIX,cnzz.com,REJECT
+DOMAIN-SUFFIX,cocounion.com,REJECT
+DOMAIN-SUFFIX,conversantmedia.com,REJECT
+DOMAIN-SUFFIX,conviva.com,REJECT
+DOMAIN-SUFFIX,criteo.com,REJECT
+DOMAIN-SUFFIX,crwdcntrl.net,REJECT
+DOMAIN-SUFFIX,ctrmi.com,REJECT
+DOMAIN-SUFFIX,demdex.net,REJECT
+DOMAIN-SUFFIX,dianomi.com,REJECT
+DOMAIN-SUFFIX,digitru.st,REJECT
+DOMAIN-SUFFIX,dtscout.com,REJECT
+DOMAIN-SUFFIX,duapps.com,REJECT
+DOMAIN-SUFFIX,effectivemeasure.net,REJECT
+DOMAIN-SUFFIX,endpo.in,REJECT
+DOMAIN-SUFFIX,eum-appdynamics.com,REJECT
+DOMAIN-SUFFIX,exoclick.com,REJECT
+DOMAIN-SUFFIX,exosrv.com,REJECT
+DOMAIN-SUFFIX,exponential.com,REJECT
+DOMAIN-SUFFIX,exposebox.com,REJECT
+DOMAIN-SUFFIX,eyeota.net,REJECT
+DOMAIN-SUFFIX,eyeviewads.com,REJECT
+DOMAIN-SUFFIX,flurry.com,REJECT
+DOMAIN-SUFFIX,fwmrm.net,REJECT
+DOMAIN-SUFFIX,getrockerbox.com,REJECT
+DOMAIN-SUFFIX,go2cloud.org,REJECT
+DOMAIN-SUFFIX,go-mpulse.net,REJECT
+DOMAIN-SUFFIX,gowadogo.com,REJECT
+DOMAIN-SUFFIX,growingio.com,REJECT
+DOMAIN-SUFFIX,gwallet.com,REJECT
+DOMAIN-SUFFIX,i2000.xyz,REJECT
+DOMAIN-SUFFIX,igexin.com,REJECT
+DOMAIN-SUFFIX,i-mobile.co.jp,REJECT
+DOMAIN-SUFFIX,imrworldwide.com,REJECT
+DOMAIN-SUFFIX,indexww.com,REJECT
+DOMAIN-SUFFIX,inmobi.cn,REJECT
+DOMAIN-SUFFIX,inmobi.com,REJECT
+DOMAIN-SUFFIX,instabug.com,REJECT
+DOMAIN-SUFFIX,irs01.com,REJECT
+DOMAIN-SUFFIX,juicyads.com,REJECT
+DOMAIN-SUFFIX,kejet.net,REJECT
+DOMAIN-SUFFIX,knlob.com,REJECT
+DOMAIN-SUFFIX,kochava.com,REJECT
+DOMAIN-SUFFIX,koolmediaoffers.com,REJECT
+DOMAIN-SUFFIX,krxd.net,REJECT
+DOMAIN-SUFFIX,leadzu.com,REJECT
+DOMAIN-SUFFIX,leanplum.com,REJECT
+DOMAIN-SUFFIX,lenzmx.com,REJECT
+DOMAIN-SUFFIX,lifestreet.com,REJECT
+DOMAIN-SUFFIX,lifestreetmedia.com,REJECT
+DOMAIN-SUFFIX,ligatus.com,REJECT
+DOMAIN-SUFFIX,lnk0.com,REJECT
+DOMAIN-SUFFIX,luomi.com,REJECT
+DOMAIN-SUFFIX,madserving.com,REJECT
+DOMAIN-SUFFIX,mathtag.com,REJECT
+DOMAIN-SUFFIX,media.net,REJECT
+DOMAIN-SUFFIX,medialytics.com,REJECT
+DOMAIN-SUFFIX,metalex.io,REJECT
+DOMAIN-SUFFIX,mfadsrvr.com,REJECT
+DOMAIN-SUFFIX,mgid.com,REJECT
+DOMAIN-SUFFIX,miaozhen.com,REJECT
+DOMAIN-SUFFIX,moatads.com,REJECT
+DOMAIN-SUFFIX,mobileapptracking.com,REJECT
+DOMAIN-SUFFIX,mobiw.com,REJECT
+DOMAIN-SUFFIX,mojiva.com,REJECT
+DOMAIN-SUFFIX,mopub.com,REJECT
+DOMAIN-SUFFIX,mparticle.com,REJECT
+DOMAIN-SUFFIX,mxpnl.com,REJECT
+DOMAIN-SUFFIX,mybest.app,REJECT
+DOMAIN-SUFFIX,mydas.mobi,REJECT
+DOMAIN-SUFFIX,nexage.com,REJECT
+DOMAIN-SUFFIX,nr-data.net,REJECT
+DOMAIN-SUFFIX,offerstrack.net,REJECT
+DOMAIN-SUFFIX,omtrdc.net,REJECT
+DOMAIN-SUFFIX,outbrain.com,REJECT
+DOMAIN-SUFFIX,parsely.com,REJECT
+DOMAIN-SUFFIX,peak-adx.com,REJECT
+DOMAIN-SUFFIX,personaly.click,REJECT
+DOMAIN-SUFFIX,popads.com,REJECT
+DOMAIN-SUFFIX,popads.net,REJECT
+DOMAIN-SUFFIX,propellerads.com,REJECT
+DOMAIN-SUFFIX,pubnative.net,REJECT
+DOMAIN-SUFFIX,qchannel01.cn,REJECT
+DOMAIN-SUFFIX,qualtrics.com,REJECT
+DOMAIN-SUFFIX,quantserve.com,REJECT
+DOMAIN-SUFFIX,quixdtrk.com,REJECT
+DOMAIN-SUFFIX,rayjump.com,REJECT
+DOMAIN-SUFFIX,rubiconproject.com,REJECT
+DOMAIN-SUFFIX,scorecardresearch.com,REJECT
+DOMAIN-SUFFIX,serving-sys.com,REJECT
+DOMAIN-SUFFIX,simplepath.com,REJECT
+DOMAIN-SUFFIX,skimresources.com,REJECT
+DOMAIN-SUFFIX,smardroid.com,REJECT
+DOMAIN-SUFFIX,smartadserver.com,REJECT
+DOMAIN-SUFFIX,snnd.co,REJECT
+DOMAIN-SUFFIX,sonobi.com,REJECT
+DOMAIN-SUFFIX,starmobs.com,REJECT
+DOMAIN-SUFFIX,startappexchange.com,REJECT
+DOMAIN-SUFFIX,startappservice.com,REJECT
+DOMAIN-SUFFIX,storygize.net,REJECT
+DOMAIN-SUFFIX,summerhamster.com,REJECT
+DOMAIN-SUFFIX,supersonicads.com,REJECT
+DOMAIN-SUFFIX,taboola.com,REJECT
+DOMAIN-SUFFIX,tagtic.cn,REJECT
+DOMAIN-SUFFIX,talkingdata.com,REJECT
+DOMAIN-SUFFIX,tango-deg.com,REJECT
+DOMAIN-SUFFIX,tanv.com,REJECT
+DOMAIN-SUFFIX,tanx.com,REJECT
+DOMAIN-SUFFIX,tapad.com,REJECT
+DOMAIN-SUFFIX,taplytics.com,REJECT
+DOMAIN-SUFFIX,taptica.com,REJECT
+DOMAIN-SUFFIX,testplus.cn,REJECT
+DOMAIN-SUFFIX,trackclickers.com,REJECT
+DOMAIN-SUFFIX,trafficjunky.net,REJECT
+DOMAIN-SUFFIX,trustx.org,REJECT
+DOMAIN-SUFFIX,tuanxue360.net,REJECT
+DOMAIN-SUFFIX,turn.com,REJECT
+DOMAIN-SUFFIX,uberads.com,REJECT
+DOMAIN-SUFFIX,udrig.com,REJECT
+DOMAIN-SUFFIX,umeng.co,REJECT
+DOMAIN-SUFFIX,umeng.com,REJECT
+DOMAIN-SUFFIX,umengcloud.com,REJECT
+DOMAIN-SUFFIX,upcpi.com,REJECT
+DOMAIN-SUFFIX,urbanairship.com,REJECT
+DOMAIN-SUFFIX,usebutton.com,REJECT
+DOMAIN-SUFFIX,voiceads.cn,REJECT
+DOMAIN-SUFFIX,vrtcal.com,REJECT
+DOMAIN-SUFFIX,vserv.mobi,REJECT
+DOMAIN-SUFFIX,vungle.com,REJECT
+DOMAIN-SUFFIX,webspectator.com,REJECT
+DOMAIN-SUFFIX,xadchina.cn,REJECT
+DOMAIN-SUFFIX,xdrig.com,REJECT
+DOMAIN-SUFFIX,yldbt.com,REJECT
+DOMAIN-SUFFIX,yllix.com,REJECT
+DOMAIN-SUFFIX,ymtracking.com,REJECT
+
 DOMAIN-KEYWORD,analysys,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,analysis,REJECT
@@ -191,6 +399,29 @@ DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
 USER-AGENT,wpsoffice*,REJECT
 DOMAIN-SUFFIX,tlnk.io,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
+
+# > ChinaNet
+IP-CIDR,61.160.200.223/32,REJECT,no-resolve
+IP-CIDR,61.160.200.242/32,REJECT,no-resolve
+IP-CIDR,61.160.200.252/32,REJECT,no-resolve
+IP-CIDR,61.174.50.214/32,REJECT,no-resolve
+IP-CIDR,111.175.220.163/32,REJECT,no-resolve
+IP-CIDR,111.175.220.164/32,REJECT,no-resolve
+IP-CIDR,124.232.160.178/32,REJECT,no-resolve
+IP-CIDR,175.6.223.15/32,REJECT,no-resolve
+IP-CIDR,183.59.53.237/32,REJECT,no-resolve
+IP-CIDR,218.93.127.37/32,REJECT,no-resolve
+IP-CIDR,221.228.17.152/32,REJECT,no-resolve
+IP-CIDR,221.231.6.79/32,REJECT,no-resolve
+IP-CIDR,222.186.61.91/32,REJECT,no-resolve
+IP-CIDR,222.186.61.95/32,REJECT,no-resolve
+IP-CIDR,222.186.61.96/32,REJECT,no-resolve
+IP-CIDR,222.186.61.97/32,REJECT,no-resolve
+# > ChinaUnicom
+IP-CIDR,106.75.231.48/32,REJECT,no-resolve
+IP-CIDR,119.4.249.166/32,REJECT,no-resolve
+IP-CIDR,220.196.52.141/32,REJECT,no-resolve
+IP-CIDR,221.6.4.148/32,REJECT,no-resolve
 
 
 # > Baidu
@@ -960,6 +1191,12 @@ DOMAIN-SUFFIX,wolframalpha.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,x-art.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,yimg.com,PROXY,force-remote-dns
 
+
+DOMAIN-SUFFIX,t.me,PROXY
+DOMAIN-SUFFIX,tdesktop.com,PROXY
+DOMAIN-SUFFIX,telegra.ph,PROXY
+DOMAIN-SUFFIX,telegram.me,PROXY
+DOMAIN-SUFFIX,telegram.org,PROXY
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,91.108.8.0/22,PROXY,no-resolve
 IP-CIDR,91.108.56.0/22,PROXY,no-resolve
