--- a/fiter.conf
+++ b/fiter.conf
@@ -1457,7 +1457,7 @@ IP-CIDR,192.168.0.0/16,DIRECT
 
 // Prior
 DOMAIN,client.amplifi.com,DIRECT
-DOMAIN,ip.bjango.com,DIRECT // iStat Menu IP Test
+DOMAIN,ip.bjango.com,DIRECT 
 DOMAIN-SUFFIX,alphassl.com,DIRECT
 DOMAIN-SUFFIX,edu.cn,DIRECT
 
