--- a/fiter.conf
+++ b/fiter.conf
@@ -39,11 +39,11 @@ DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
 
 # > Exclusions
-DOMAIN,analytics.google.com,PROXY,force-remote-dns
-DOMAIN,analyticsinsights-pa.googleapis.com,PROXY,force-remote-dns
-DOMAIN,analyticsreporting.googleapis.com,PROXY,force-remote-dns
+DOMAIN,analytics.google.com,PROXY, resolve-on-proxy
+DOMAIN,analyticsinsights-pa.googleapis.com,PROXY, resolve-on-proxy
+DOMAIN,analyticsreporting.googleapis.com,PROXY, resolve-on-proxy
 DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
-DOMAIN-SUFFIX,goodreads.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,goodreads.com,PROXY, resolve-on-proxy
 
 //me
 DOMAIN-SUFFIX,mmstat.com,REJECT
@@ -630,7 +630,7 @@ IP-CIDR,74.117.182.77/32,REJECT,no-resolve
 IP-CIDR,78.140.131.214/32,REJECT,no-resolve
 
 //me
-DOMAIN-SUFFIX,muncloud.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,muncloud.com,PROXY, resolve-on-proxy
 IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
 DOMAIN-SUFFIX,cordcloud.cc,PROXY,force-remote-dns
 DOMAIN,e.crashlytics.com,DIRECT
