--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -70,7 +70,6 @@ DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
 DOMAIN-SUFFIX,goodreads.com,PROXY,force-remote-dns
 
 //me
-URL-REGEX,*(360|so)\.(cn|com),REJECT
 DOMAIN-SUFFIX,mmstat.com,REJECT
 DOMAIN-SUFFIX,tanx.com,REJECT
 
@@ -495,8 +494,8 @@ IP-CIDR,17.0.0.0/8,策略
 DOMAIN,appleiphonecell.com,策略
 USER-AGENT,AppStore*,策略
 USER-AGENT,com.apple.appstored*,策略
-USER-AGENT,cloudd*,策略
-DOMAIN-KEYWORD,icloud,策略
+USER-AGENT,cloudd*,PROXY
+DOMAIN-KEYWORD,icloud,PROXY
 DOMAIN-KEYWORD,itunes,策略
 DOMAIN-SUFFIX,aaplimg.com,策略
 DOMAIN-SUFFIX,apple.co,策略
@@ -505,8 +504,8 @@ DOMAIN-SUFFIX,appsto.re,策略
 DOMAIN-SUFFIX,cdn-apple.com,策略
 DOMAIN-SUFFIX,me.com,策略
 DOMAIN-SUFFIX,mzstatic.com,策略
-DOMAIN-SUFFIX,icloud.com,策略
-DOMAIN-SUFFIX,icloud-content.com,策略
+DOMAIN-SUFFIX,icloud.com,PROXY
+DOMAIN-SUFFIX,icloud-content.com,PROXY
 DOMAIN-SUFFIX,itunes.com,策略
 DOMAIN-SUFFIX,itunes-apple.com.akadns.net,策略
 
@@ -851,33 +850,33 @@ IP-CIDR,18.232.0.0/14,PROXY,no-resolve
 IP-CIDR,52.200.0.0/13,PROXY,no-resolve
 IP-CIDR,52.58.0.0/15,PROXY,no-resolve
 IP-CIDR,52.74.0.0/16,PROXY,no-resolve
-IP-CIDR,52.77.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,52.84.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.156.0.0/14,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.226.0.0/15,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.230.156.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,54.93.0.0/16,PROXY,force-remote-dns,no-resolve
+IP-CIDR,52.77.0.0/16,PROXY,no-resolve
+IP-CIDR,52.84.0.0/15,PROXY,no-resolve
+IP-CIDR,54.156.0.0/14,PROXY,no-resolve
+IP-CIDR,54.226.0.0/15,PROXY,no-resolve
+IP-CIDR,54.230.156.0/22,PROXY,no-resolve
+IP-CIDR,54.93.0.0/16,PROXY,no-resolve
 
 // Facebook
-IP-CIDR,103.4.96.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,129.134.0.0/17,PROXY,force-remote-dns,no-resolve
-IP-CIDR,157.240.0.0/17,PROXY,force-remote-dns,no-resolve
-IP-CIDR,173.252.64.0/19,PROXY,force-remote-dns,no-resolve
-IP-CIDR,173.252.96.0/19,PROXY,force-remote-dns,no-resolve
-IP-CIDR,179.60.192.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,185.60.216.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,204.15.20.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,31.13.24.0/21,PROXY,force-remote-dns,no-resolve
-IP-CIDR,31.13.64.0/18,PROXY,force-remote-dns,no-resolve
-IP-CIDR,45.64.40.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,66.220.144.0/20,PROXY,force-remote-dns,no-resolve
-IP-CIDR,69.171.224.0/19,PROXY,force-remote-dns,no-resolve
-IP-CIDR,69.63.176.0/20,PROXY,force-remote-dns,no-resolve
-IP-CIDR,74.119.76.0/22,PROXY,force-remote-dns,no-resolve
+IP-CIDR,103.4.96.0/22,PROXY,no-resolve
+IP-CIDR,129.134.0.0/17,PROXY,no-resolve
+IP-CIDR,157.240.0.0/17,PROXY,no-resolve
+IP-CIDR,173.252.64.0/19,PROXY,,no-resolve
+IP-CIDR,173.252.96.0/19,PROXY,no-resolve
+IP-CIDR,179.60.192.0/22,PROXY,no-resolve
+IP-CIDR,185.60.216.0/22,PROXY,no-resolve
+IP-CIDR,204.15.20.0/22,PROXY,no-resolve
+IP-CIDR,31.13.24.0/21,PROXY,no-resolve
+IP-CIDR,31.13.64.0/18,PROXY,no-resolve
+IP-CIDR,45.64.40.0/22,PROXY,no-resolve
+IP-CIDR,66.220.144.0/20,PROXY,no-resolve
+IP-CIDR,69.171.224.0/19,PROXY,no-resolve
+IP-CIDR,69.63.176.0/20,PROXY,no-resolve
+IP-CIDR,74.119.76.0/22,PROXY,no-resolve
 
 // Google
-IP-CIDR,173.194.0.0/16,PROXY,force-remote-dns,no-resolve
-IP-CIDR,74.125.0.0/16,PROXY,force-remote-dns,no-resolve
+IP-CIDR,173.194.0.0/16,PROXY,no-resolve
+IP-CIDR,74.125.0.0/16,PROXY,no-resolve
 
 DOMAIN-SUFFIX,abc.xyz,PROXY,force-remote-dns
 DOMAIN-SUFFIX,android.com,PROXY,force-remote-dns
@@ -985,11 +984,11 @@ DOMAIN-SUFFIX,wolframalpha.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,x-art.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,yimg.com,PROXY,force-remote-dns
 
-IP-CIDR,91.108.4.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,91.108.8.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,91.108.56.0/22,PROXY,force-remote-dns,no-resolve
-IP-CIDR,109.239.140.0/24,PROXY,force-remote-dns,no-resolve
-IP-CIDR,149.154.160.0/20,PROXY,force-remote-dns,no-resolve
+IP-CIDR,91.108.4.0/22,PROXY,no-resolve
+IP-CIDR,91.108.8.0/22,PROXY,no-resolve
+IP-CIDR,91.108.56.0/22,PROXY,no-resolve
+IP-CIDR,109.239.140.0/24,PROXY,no-resolve
+IP-CIDR,149.154.160.0/20,PROXY,no-resolve
 
 
 # DIRECT
@@ -1233,6 +1232,7 @@ USER-AGENT,WeChat*,DIRECT
 
 //腾讯IP
 IP-CIDR,134.175.0.0/16,DIRECT
+IP-CIDR,1.255.62.0/24,DIRECT,no-resolve
 
 // Accelerate direct sites
 DOMAIN-KEYWORD,torrent,DIRECT
@@ -1246,9 +1246,13 @@ IP-CIDR,192.168.0.0/16,DIRECT
 
 // Prior
 DOMAIN,client.amplifi.com,DIRECT
-DOMAIN,ip.bjango.com,DIRECT // iStat Menu IP Test
+DOMAIN,ip.bjango.com,DIRECT
 DOMAIN-SUFFIX,alphassl.com,DIRECT
 DOMAIN-SUFFIX,edu.cn,DIRECT
+
+//ali
+ip-cidr, 47.246.16.0/24, direct
+ip-cidr, 205.204.96.0/19, direct
 
 // TeamViewer
 IP-CIDR,185.188.32.0/24,DIRECT,no-resolve
@@ -1258,12 +1262,9 @@ IP-CIDR,185.188.35.0/24,DIRECT,no-resolve
 
 // Accelerate direct sites
 DOMAIN-KEYWORD,torrent,DIRECT
-URL-REGEX,ed2k*,DIRECT
-URL-REGEX,magnet*,DIRECT
 
 
 GEOIP,CN,DIRECT
-GEOIP,US,PROXY
 FINAL,PROXY
 
 [GLOBAL]
